--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,14 +10,23 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
         <activity
-            android:name="com.mwi.oledsaver.MainActivity"
+            android:name="com.mwi.oledsaver.activity.MainActivity"
             android:theme="@style/Theme.Transparent"
+            android:launchMode="singleTop"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
+        <activity android:name=".activity.MaskerActivity"
+            android:theme="@style/Theme.Transparent"
+            android:launchMode="singleTop"
+            android:exported="true">
+        </activity>
 
+        <receiver android:name=".activity.MaskerBroadcastReceiver" android:enabled="true">
+
+        </receiver>
+    </application>
 </manifest>
