--- a/gradle.properties
+++ b/gradle.properties
@@ -16,10 +16,11 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
-android.enableJetifier=true
+android.enableJetifier=false
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 android.nonTransitiveRClass=true
 android.nonFinalResIds=false
 
 org.gradle.java.home = D:/jdk/temurin-21
+org.gradle.configuration-cache=true
