--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.ACTION_MANAGE_OVERLAY_PERMISSION" />
 
     <application
         android:icon="@mipmap/ic_launcher"
@@ -28,14 +29,6 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.MaskerActivity"
-            android:theme="@style/Theme.Transparent"
-            android:launchMode="singleTop"
-            android:exported="true"
-            android:focusable="false"
-            android:clickable="false"
-            >
-        </activity>
-        <activity android:name=".exit.ExitActivity"
             android:theme="@style/Theme.Transparent"
             android:launchMode="singleTop"
             android:exported="true"
