--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,8 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     // for fragments navigation
     id 'org.jetbrains.kotlin.plugin.serialization' version '2.0.21'
+
+    id "com.google.protobuf"
 }
 
 android {
@@ -36,6 +38,19 @@ android {
     }
     namespace 'com.mwi.oledsaver'
 
+    sourceSets {
+        main {
+            java {
+                srcDirs += "build/generated/source/proto/main/java"
+            }
+            kotlin {
+                srcDirs += "build/generated/source/proto/main/kotlin"
+            }
+            proto {
+                srcDir "src/main/proto" // default value
+            }
+        }
+    }
 }
 
 dependencies {
@@ -62,7 +77,38 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.8.7'
     implementation 'androidx.fragment:fragment-ktx:1.5.6'
 
+    // Android data store to save properties
+    implementation("androidx.datastore:datastore:1.1.7")
+    implementation "androidx.datastore:datastore-core:1.1.7"
+    implementation "com.google.protobuf:protobuf-javalite:3.25.8"
+    implementation "com.google.protobuf:protobuf-kotlin-lite:3.25.8"
+
     // other
     def eventbus_version = '3.3.1'
     implementation "org.greenrobot:eventbus:$eventbus_version"
+}
+
+protobuf {
+    protoc {
+        artifact = "com.google.protobuf:protoc:3.25.8"
+    }
+    plugins {
+        javalite {
+            artifact = "com.google.protobuf:protoc-gen-javalite:3.0.0"
+        }
+        grpc { artifact = 'io.grpc:protoc-gen-grpc-java:1.34.1' }
+    }
+    generateProtoTasks {
+        all().each { task ->
+            task.builtins{
+                java { option 'lite' }
+            }
+            task.plugins {
+                grpc { option 'lite' }
+            }
+        }
+    }
+
+
+
 }
